# curves

./: CMakeLists.txt
src/Curve/: BasicCurve.h  Circle.cpp  Ellipse.cpp  Helix.cpp
test/: test_curve.cpp
